# SDS_ipfl

./: .env.example  .gitignore  Makefile  README.md  config.yml  domain.yml  gen_plots.py  main.py  pyproject.toml
actions/: actions.py
client/: index.html
data/: nlu.yml  rules.yml  stories.yml
server/: speech_server.py
tests/: test_nlu.yml  test_stories.yml
user_data/: cantinas.csv  ementa.csv  exames.csv  horario.csv
