[project]
name = "ua-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.125.0",
    "groq>=1.4.0",
    "gtts>=2.5.4",
    "openai-whisper>=20250625",
    "pandas>=2.0.3",
    "python-multipart>=0.0.32",
    "rasa==3.6.21",
    "scipy>=1.10.1",
    "sounddevice>=0.5.5",
    "uvicorn>=0.49.0",
]
